--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+<script src="../assets/function.js?ClientId=235978ac-d5aa-4152-b145-c1dda74f18c4"></script>
   <meta charset="utf-8">
   <title>Applove</title>
   <base href="/">
